# rust_vulkan_msdf_font

./: Cargo.toml  LICENSE  README.md  build.rs
resources/: arial.json  arial_msdf.json  arial_sdf.json  fragment_shader.frag  fragment_shader.frag.spv  fragment_shader_msdf.frag  fragment_shader_msdf.frag.spv  fragment_shader_sdf.frag  fragment_shader_sdf.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
src/: main.rs  utils.rs
src/app/: allocate_position_uv_font_descriptor_set.rs  check_instance_version.rs  check_required_instance_extensions.rs  copy_data_to_image.rs  create_allocator.rs  create_buffer.rs  create_command_pool.rs  create_descriptor_pool.rs  create_descriptor_set_layout.rs  create_fences.rs  create_framebuffers.rs  create_image_and_view.rs  create_instance.rs  create_logical_device.rs  create_pipeline.rs  create_pipeline_layout.rs  create_render_pass.rs  create_sampler.rs  create_semaphores.rs  create_shader_module.rs  create_surface.rs  create_swapchain.rs  data.rs  draw.rs  get_depth_format.rs  get_device_queue.rs  get_font_data.rs  get_physical_device.rs  get_present_mode.rs  get_queue_family.rs  get_required_instance_extensions.rs  get_rgba_image.rs  get_surface_format.rs  get_swapchain_image_views.rs  get_swapchain_images.rs  mod.rs  set_debug_utils_object_name.rs  update_descriptor_set_with_buffer.rs  update_descriptor_set_with_combined_image_sampler.rs  update_vertex_positions.rs  (+1 more)
