[package]
authors = ["nc <nikita.cherniy@ibeo-as.com>"]
edition = "2018"
name = "rust_ash_sdf_font"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
ash-window = "0.5.0"
gpu-allocator = "0.1"
image = "0.23.11"
log = "0.4.11"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
vk-mem = "0.2.2"
winit = "0.23.0"
